--- a/MyServices/MyServices/App.config
+++ b/MyServices/MyServices/App.config
@@ -9,13 +9,17 @@
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8080/ServiceModelSamples/service"/>
+            <add baseAddress="net.tcp://localhost:9000/MyService"/>
           </baseAddresses>
         </host>
         <!-- this endpoint is exposed at the base address provided by host: http://localhost:8000/ServiceModelSamples/service  -->
         <endpoint address=""
                   binding="wsHttpBinding"
                   contract="Microsoft.ServiceModel.Samples.ICalculator" />
-        <endpoint address="net.tcp://localhost:9000/MyService"
+        <endpoint address="http://localhost:8081/ServiceModelSamples/serviceNetHttp"
+                  binding="netHttpBinding"
+                  contract="Microsoft.ServiceModel.Samples.ICalculator" />
+        <endpoint address=""
                   binding="netTcpBinding"
                   contract="Microsoft.ServiceModel.Samples.ICalculator"  />
         <!-- the mex endpoint is exposed at http://localhost:8000/ServiceModelSamples/service/mex -->
